dataset1235/2025-2/1955397009/users/4276496853/executions/3239899347_3968058195.log
== RUN (2025-08-28 12:35:42)
-- CODE: 
valor_em_Libras
valor_em_Libras = float (input())
print(valor_em_Libras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras
NameError: name 'valor_em_Libras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:36:36)
-- CODE: 
valor_em_Libras("defina o valor")
valor_em_Libras = float (input())
print(valor_em_Libras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:27:40)
-- CODE: 
Real = libras * 6.13
Valoremlibras
ValoremLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:35:29)
-- CODE: 
valor_em_Libras
valor_em_Libras = float (input())
print(valor_em_Libras * 6.13))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 3
    print(valor_em_Libras * 6.13))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 3
    print(valor_em_Libras * 6.13))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 3
    print(valor_em_Libras * 6.13))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 3
    print(valor_em_Libras * 6.13))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 3
    print(valor_em_Libras * 6.13))
                                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 3
    print(valor_em_Libras * 6.13))
                                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:23:21)
-- CODE: 
ValorEmLibras
ValorEmLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorEmLibras
NameError: name 'ValorEmLibras' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorEmLibras
NameError: name 'ValorEmLibras' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorEmLibras
NameError: name 'ValorEmLibras' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorEmLibras
NameError: name 'ValorEmLibras' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorEmLibras
NameError: name 'ValorEmLibras' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ValorEmLibras
NameError: name 'ValorEmLibras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:29:49)
-- CODE: 
Valor_emLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_emLibras'?
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_emLibras'?
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_emLibras'?
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_emLibras'?
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_emLibras'?
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_emLibras'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:29:24)
-- CODE: 
ValoremLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValoremLibras'?
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValoremLibras'?
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValoremLibras'?
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValoremLibras'?
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValoremLibras'?
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValoremLibras'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:23:38)
-- CODE: 
ValorEmLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValorEmLibras'?
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValorEmLibras'?
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValorEmLibras'?
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValorEmLibras'?
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValorEmLibras'?
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'ValorEmLibras'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:30:07)
-- CODE: 
Valor_em_Libras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_em_Libras'?
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_em_Libras'?
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_em_Libras'?
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_em_Libras'?
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_em_Libras'?
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'Valor_em_Libras'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 13:02:14)
-- CODE: 

valor_em_Libras = float (input())
print(valor_Em_Libras 0,018 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 3
    print(valor_Em_Libras 0,018 )
                            ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 3
    print(valor_Em_Libras 0,018 )
                            ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 3
    print(valor_Em_Libras 0,018 )
                            ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 3
    print(valor_Em_Libras 0,018 )
                            ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 3
    print(valor_Em_Libras 0,018 )
                            ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 3
    print(valor_Em_Libras 0,018 )
                            ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:30:28)
-- CODE: 
valor_em_Libras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'valor_em_Libras'?
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'valor_em_Libras'?
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'valor_em_Libras'?
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'valor_em_Libras'?
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'valor_em_Libras'?
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(valorEmLibras * 6.13)
          ^^^^^^^^^^^^^
NameError: name 'valorEmLibras' is not defined. Did you mean: 'valor_em_Libras'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:38:02)
-- CODE: 
valor_em_Libras = float (input())
print(valor_em_Libras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
---- user output:
6.13
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
---- user output:
12.26
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
---- user output:
49.04
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
---- user output:
128.73
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
---- user output:
116.47
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
---- user output:
55.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:26:34)
-- CODE: 
Real = Libras x 6,13
Valoremlibras
ValoremLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6,13
                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6,13
                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6,13
                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6,13
                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6,13
                  ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6,13
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:32:32)
-- CODE: 
valor_em_Libras = float(input())
print(round(valor_em_Libras * 6.13))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
---- user output:
6
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
---- user output:
12
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
---- user output:
49
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
---- user output:
129
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
---- user output:
116
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
---- user output:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:28:42)
-- CODE: 
Real = Libras * 6.13
Valoremlibras
ValoremLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:26:55)
-- CODE: 
Real = Libras * 6.13
Valoremlibras
ValoremLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:31:11)
-- CODE: 
valor_em_Libras = float(input())
print(valor_em_Libras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
---- user output:
6.13
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
---- user output:
12.26
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
---- user output:
49.04
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
---- user output:
128.73
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
---- user output:
116.47
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
---- user output:
55.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:33:01)
-- CODE: 
valor_em_Libras = float(input())
print(round(valor_em_Libras */n 6.13))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    print(round(valor_em_Libras */n 6.13))
                                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    print(round(valor_em_Libras */n 6.13))
                                 ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    print(round(valor_em_Libras */n 6.13))
                                 ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    print(round(valor_em_Libras */n 6.13))
                                 ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    print(round(valor_em_Libras */n 6.13))
                                 ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    print(round(valor_em_Libras */n 6.13))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:36:37)
-- CODE: 
valor_em_Libras("defina o valor")
valor_em_Libras = float (input())
print(valor_em_Libras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor_em_Libras("defina o valor")
    ^^^^^^^^^^^^^^^
NameError: name 'valor_em_Libras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:28:43)
-- CODE: 
Real = Libras * 6.13
Valoremlibras
ValoremLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:37:28)
-- CODE: 
Real = Libras * 6.13
valor_em_Libras = float (input())
print(valor_em_Libras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = Libras * 6.13
           ^^^^^^
NameError: name 'Libras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 13:00:20)
-- CODE: 
valor_em_Libras = float (input())
print(valor_Em_Libras  6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 2
    print(valor_Em_Libras  6.13)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 2
    print(valor_Em_Libras  6.13)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 2
    print(valor_Em_Libras  6.13)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 2
    print(valor_Em_Libras  6.13)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 2
    print(valor_Em_Libras  6.13)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 2
    print(valor_Em_Libras  6.13)
          ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:33:18)
-- CODE: 
valor_em_Libras = float(input())
print(round(valor_em_Libras *6.13 /n))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:27:55)
-- CODE: 
Real = Libras x 6.13
Valoremlibras
ValoremLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6.13
                  ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6.13
                  ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6.13
                  ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6.13
                  ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6.13
                  ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
File "XXXX", line 1
    Real = Libras x 6.13
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:27:40)
-- CODE: 
Real = libras * 6.13
Valoremlibras
ValoremLibras = float(input())
print(valorEmLibras * 6.13)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Real = libras * 6.13
           ^^^^^^
NameError: name 'libras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:33:33)
-- CODE: 
valor_em_Libras = float(input())
print(round(valor_em_Libras *6.13 /n))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
0.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
-- TEST CASE 2:
---- input:
2
---- correct output:
0.04
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
0.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
0.38
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
-- TEST CASE 5:
---- input:
19
---- correct output:
0.34
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
-- TEST CASE 6:
---- input:
9
---- correct output:
0.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor_em_Libras *6.13 /n))
                                       ^
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
